<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item

        android:title="@string/settings"
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings"/>

    <item

        android:title="@string/offers"
        android:id="@+id/offers"
        android:icon="@drawable/ic_baseline_local_offer"
        />

  <item

      android:title="@string/sign_in_sign_up"
      android:id="@+id/signIn_signUp"
      android:icon="@drawable/ic_baseline_login"
      />


    <item

        android:title="FAVOURITES"
        android:id="@+id/favourites"
        android:icon="@drawable/ic_baseline_favorite_unclicked_sidebar"
        />
  <!--app:showAsAction="always"-->



</menu>